--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
-<body class="bg-primary">
-    
+<body>
+    <div class="flex-banner">
+        <div class="flex-item border border-danger"><button>Home</button></div>
+        <div class="flex-item border border-success"><button>Clear Budget</button></div>
+        <div class="flex-item border border-dark"><button>Play Music</button></div>
+    </div>
 </body>
 </html>
