--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="flex-banner">
-        <div class="flex-item border border-danger"><button>Home</button></div>
-        <div class="flex-item border border-success"><button>Clear Budget</button></div>
-        <div class="flex-item border border-dark"><button>Play Music</button></div>
+    <div class="flex-banner shadow-sm">
+        <div class="flex-item"><button class="btn btn-primary btn-sm">Click for a surprise</button></div>
+        <div class="flex-item"><button class="btn btn-danger btn-sm">Clear Budget</button></div>
+        <div class="flex-item"><button class="btn btn-dark btn-sm">Play Music</button></div>
+    </div>
+    <div class="container col-lg-9 col-10">
+        <h3 class="mt-3">Welcome Nana,</h3>
+        <p class="my-3">As your father, Nana, I care a lot about you and I want the best for you. However, it saddens my heart that you are fond of squandering the money I made available to you and at the end of each day, you can't account for how much you spend again. As a result, I employed the services of a developer to build a simple budget app for to help you manage your finances.</p>
+        <p class="my-2">Love and light,</p>
+        <p class="my-2 text-decoration-underline">Daddy</p>
     </div>
 </body>
 </html>
