--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,9 @@
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <script src="bootstrap.js"></script>
 </head>
+
 <body>
     <div class="flex-banner shadow-sm">
         <div class="flex-item"><button class="btn btn-primary btn-sm">Click for a surprise</button></div>
@@ -16,9 +19,42 @@
     </div>
     <div class="container col-lg-9 col-10">
         <h3 class="mt-3">Welcome Nana,</h3>
-        <p class="my-3">As your father, Nana, I care a lot about you and I want the best for you. However, it saddens my heart that you are fond of squandering the money I made available to you and at the end of each day, you can't account for how much you spend again. As a result, I employed the services of a developer to build a simple budget app for to help you manage your finances.</p>
+        <p class="my-3">As your father, Nana, I care a lot about you and I want the best for you. However, it saddens my
+            heart that you are fond of squandering the money I made available to you and at the end of each day, you
+            can't account for how much you spend again. As a result, I employed the services of a developer to build a
+            simple budget app for to help you manage your finances. <span class="fw-bold">Click on the button below to
+                get started.</span></p>
         <p class="my-2">Love and light,</p>
         <p class="my-2 text-decoration-underline">Daddy</p>
+        <div class="my-2 text-center">
+            <button class="btn btn-secondary" data-toggle="modal" data-target="staticBackdrop">Withdraw money</button>
+        </div>
     </div>
+
+
+
+
+
+    <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdrop" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+      Launch demo modal
+    </button>
 </body>
+
 </html>
