bootstrap modal pended for now, other inputs being added

--- a/index.html
+++ b/index.html
@@ -26,14 +26,16 @@
         <p class="my-2">Love and light,</p>
         <p class="my-2 text-decoration-underline">Daddy</p>
         <div class="my-2 text-center">
-            <button class="btn btn-secondary" data-toggle="modal" data-bs-target="#one">Withdraw money</button>
+            <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#one">Withdraw money</button>
+        </div>
+        <div class="my-4 shadow-sm p-2">
+            <input type="text" class="form-control my-2" placeholder="Enter item">
         </div>
     </div>
 
 
 
-    <div class="modal fade" id="one" data-bs-backdrop="static" data-keyboard="false" tabindex="-1"
-        aria-labelledby="staticBackdrop" aria-hidden="true" role="dialog">
+    <div class="modal fade" id="one" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
