main inputs and buttons added

--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
         <div class="my-2 text-center">
             <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#one">Withdraw money</button>
         </div>
-        <div class="my-4 shadow-sm p-2">
+        <div class="my-4 shadow p-2 rounded-2">
+            <div class="row fw-bold my-3">
+                <p class="col-6" id="showDate"></p>
+                <p class="col-6 text-end" id="showMoney">Available money: #10,000</p>
+            </div>
             <input type="text" class="form-control my-2" placeholder="Enter item">
+            <input type="text" class="form-control my-2" placeholder="Enter price">
+            <button class="btn btn-secondary btn-sm w-100">Add</button>
         </div>
     </div>
 
