--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 
 <body>
     <div class="flex-banner shadow-sm">
-        <div class="flex-item"><button class="btn btn-primary btn-sm">Click for a surprise</button></div>
-        <div class="flex-item"><button class="btn btn-danger btn-sm">Clear Budget</button></div>
-        <div class="flex-item"><button class="btn btn-dark btn-sm">Play Music</button></div>
+        <div class="flex-item"><button class="btn btn-primary btn-sm" data-bs-toggle="modal"
+                data-bs-target="#exampleModal2">Click for a surprise</button></div>
+        <div class="flex-item"><button class="btn btn-success btn-sm" onclick="playMusic()">Play Music</button></div>
+        <div class="flex-item"><button class="btn btn-danger btn-sm" onclick="pauseMusic()">Pause Music</button></div>
     </div>
     <div class="container col-lg-9 col-10">
         <h3 class="mt-3">Welcome Nana,</h3>
@@ -26,7 +27,8 @@
         <p class="my-2">Love and light,</p>
         <p class="my-2 text-decoration-underline">Daddy</p>
         <div class="my-2 text-center">
-            <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#exampleModal" id="withdrawMoney">Withdraw
+            <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                id="withdrawMoney">Withdraw
                 money</button>
         </div>
         <div class="my-4 shadow p-2 rounded-2" id="mainInputs">
@@ -44,7 +46,7 @@
 
 
 
-    
+
 
     <!-- Modal 1 -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -61,7 +63,56 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-success" onclick="showInputs()" data-bs-dismiss="modal">OK</button>
+                    <button type="button" class="btn btn-success" onclick="showInputs()"
+                        data-bs-dismiss="modal">OK</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <!-- Modal 2 -->
+    <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Dear Daughter,</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>My Dear Nana,</p>
+                    <p>As you grow into an independent young woman, learning how to manage your finances wisely is an
+                        invaluable life skill. That's why I built this simple budgeting app tailored just for you.
+
+                        I understand that budgets can seem restrictive or intimidating. But they are incredibly
+                        empowering once you embrace them. Think of this as your roadmap that helps you save for the
+                        things you want most in life – be it college, traveling the world or your first car.</p>
+
+                        <p>
+                            Here are my three main tips:
+                            <dl>
+                                <dt>Be Realistic</dt>
+                                <dd>A good budget allows room for enjoyment but is grounded in pragmatism. Make sure your income estimates are accurate and expenses realistic. Account for an emergency fund too!</dd>
+                                <dt>Be Diligent</dt>
+                                <dd>
+                                    Check your budget regularly, and use the app to analyze spending habits.
+                                    Unexpected splurges happen, but diligence will prevent financial stress.
+                                </dd>
+                                <dt>Be Honest</dt>
+                                <dd>
+                                    To me or yourself, hiding overspending helps no one. This app is judgement-free, designed just to support you.
+                                </dd>
+                            </dl>
+                        </p>
+                        <p>
+                            Learning to budget early in life brings a sense of control and confidence that I want for you. I’ll always be here if you need budgeting advice or help using the app. You’ve got this my smart girl!
+                        </p>
+                        <p>
+                            Love,<br>
+                            Dad
+                        </p>
                 </div>
             </div>
         </div>
