Fix modal body styling

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <h1 class="modal-title fs-5" id="exampleModalLabel">Dear Daughter,</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" style="overflow-y: auto; height: 80vh;">
                     <p>My Dear Nana,</p>
                     <p>As you grow into an independent young woman, learning how to manage your finances wisely is an
                         invaluable life skill. That's why I built this simple budgeting app tailored just for you.
