Fix background color in flex-banner

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="flex-banner shadow-sm sticky-top top-0">
+    <div class="flex-banner shadow-sm sticky-top top-0 bg-light">
         <div class="flex-item"><button class="btn btn-primary btn-sm" data-bs-toggle="modal"
                 data-bs-target="#exampleModal2">Click for a surprise</button></div>
         <div class="flex-item"><button class="btn btn-success btn-sm" onclick="playMusic()">Play Music</button></div>
