Refactor HTML and CSS code

--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
     </div>
     <div class="container col-lg-9 col-10">
         <h3 class="mt-3">Welcome Nana,</h3>
-        <p class="my-3">As your father, Nana, I care a lot about you and I want the best for you. However, it saddens my
-            heart that you are fond of squandering the money I made available to you and at the end of each day, you
-            can't account for how much you spend again. As a result, I employed the services of a developer to build a
-            simple budget app for to help you manage your finances. <span class="fw-bold">Click on the button below to
-                get started.</span></p>
+        <p class="my-3">As your father, Nana, I care a lot about you and I want the best for you. However, it saddens my heart that you are fond of squandering the money I made available to you and at the end of each day, you can't account for how much you spend again. As a result, I employed the services of a developer to build a simple budget app for to help you manage your finances. <span class="fw-bold">Click on the button below to get started.</span></p>
         <p class="my-2">Love and light,</p>
         <p class="my-2 text-decoration-underline">Daddy</p>
         <div class="my-2 text-center">
