--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
         <p class="my-2">Love and light,</p>
         <p class="my-2 text-decoration-underline">Daddy</p>
         <div class="my-2 text-center">
-            <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                id="withdrawMoney">Withdraw
-                money</button>
+            <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal" id="withdrawMoney">Withdraw money</button>
         </div>
         <div class="my-4 shadow p-2 rounded-2" id="mainInputs">
             <div class="row fw-bold my-3">
@@ -37,7 +35,7 @@
             <input type="text" class="form-control my-2" placeholder="Enter item" id="item">
             <input type="text" class="form-control my-2" placeholder="Enter price" id="price">
             <small class="text-center alert alert-danger p-1 my-2" style="display: none;" id="overSpend">maximum amount exceeded</small>
-            <button class="btn btn-secondary btn-sm w-100" onclick="addBudget()">Add</button>
+            <button class="btn btn-success btn-sm w-100" onclick="addBudget()">Add</button>
             <div class="my-3">
                 <p id="showBudget"></p>
             </div>
@@ -51,7 +49,7 @@
     <!-- Modal 1 -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content">
+            <div class="modal-content modall">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="exampleModalLabel">Withdraw money</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
